# labelbox-python

./: pyproject.toml
.github/actions/lbox-matrix/: action.yml  index.js  package-lock.json
.github/workflows/: lbox-develop.yml  python-package-develop.yml
libs/labelbox/: pyproject.toml
libs/lbox-example/: README.md  pyproject.toml
libs/lbox-example/src/lbox/example/: logo.py
libs/lbox-example/src/lbox_example/: __init__.py
libs/lbox-example/tests/unit/lbox/example/: test_art.py  test_logo.py
