[project]
name = "labelbox"
version = "3.74.0"
description = "Labelbox Python API"
authors = [{ name = "Labelbox", email = "engineering@labelbox.com" }]
dependencies = [
    "google-api-core>=1.22.1",
    "pydantic>=1.8",
    "python-dateutil>=2.8.2, <2.10.0",
    "requests>=2.22.0",
    "strenum>=0.4.15",
    "tqdm>=4.66.2",
    "geojson>=3.1.0",
]

[tool.poetry]
name = "labelbox"
version = "3.74.0"
description = ""
authors = ["Ivan Malison <IvanMalison@gmail.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
google-api-core = ">=1.22.1"
pydantic = ">=1.8"
python-dateutil = ">=2.8.2, <2.10.0"
requests = ">=2.22.0"
strenum = ">=0.4.15"
tqdm = ">=4.66.2"
geojson = ">=3.1.0"
python = ">=3.10,<3.12"

[project.urls]
Homepage = "https://labelbox.com/"
Documentation = "https://labelbox-python.readthedocs.io/en/latest/"
Repository = "https://github.com/Labelbox/labelbox-python"
Issues = "https://github.com/Labelbox/labelbox-python/issues"
Changelog = "https://github.com/Labelbox/labelbox-python/blob/develop/libs/labelbox/CHANGELOG.md"

[project.optional-dependencies]
data = [
    "shapely>=2.0.3",
    # numpy v2 breaks package since it only supports python >3.9
    "numpy>=1.24.4, <2.0.0",
    "pillow>=10.2.0",
    "typeguard>=4.1.5",
    "imagesize>=1.4.1",
    "pyproj>=3.5.0",
    "pygeotile>=1.0.6",
    "typing-extensions>=4.10.0",
    "opencv-python>=4.9.0.80",
]
